--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <video id="video" width="720" height="560" autoplay muted></video>
   </div>
 
-  <script src="/face-api.min.js"></script>
+  <script src="face-api.min.js"></script>
   <script>
     // Update status message
     function updateStatus(message) {
